fixed border overlapping text + added comments

--- a/css/style.css
+++ b/css/style.css
@@ -246,7 +246,7 @@ body, .dropdown-menu, .dropdown-item, .modal-content, .close-modal, .progress{
     appearance: none;
     color: var(--flame);
     border: 0.1rem solid var(--primary);
-    padding: 0.3rem;
+    padding: 0.3em;
     cursor: pointer;
     width: 30%;
 }
@@ -465,6 +465,13 @@ body::-webkit-scrollbar-thumb{
         color: var(--pale);
         border-color: var(--flame);
         padding: 0.2rem;
+    }
+}
+
+@media only screen and (max-width: 600px){
+    .expand:hover{
+        border-color: var(--primary);
+        color: var(--flame);
     }
 }
 
